refactor: 비정상 카테고리 필터